welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:3: error: not found: value num
  var a : Int = num(0)
                ^